Pass form filter choices based on instances result set.  Style page title and set master layout background.  Fix data grid padding on small screens.  Add padding to footer.  Use request.params rather than request.POST for login form post data.

--- a/koala/static/css/pages/instances.css
+++ b/koala/static/css/pages/instances.css
@@ -24,8 +24,12 @@
 
 .sort-search form { margin-bottom: 0; }
 
-.match-condition { font-size: 0.8125rem; }
+.match-condition { font-size: 0.8125rem; margin-bottom: 4px; }
 
+/* ----------------------------------------- Media Queries
+----------------------------------------- */
+/* Small screen */
+@media screen and (max-width: 768px) { .columns.datagrid { padding-left: 1rem; } }
 .tile.instance .status.running { background-color: green; }
 
 .tile.instance .status.pending { background-color: lightgreen; }
